--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,6 +3,19 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-nav a.active {
-    color:aqua;
+nav {
+    a {
+        display: inline;
+        padding: 6px 6px;
+        text-decoration: none;
+        color: gray;
+    }
+    a.active {
+        color: black;
+        text-decoration: none;
+    }
+    a.visited {
+        color: gray;
+        font-weight: bold;
+    }
 }
