Cleaning up and build

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -11,7 +11,7 @@ nav {
         color: gray;
     }
     a.active {
-        color: black;
+        color: rgb(141, 0, 0);
         text-decoration: none;
     }
     a.visited {
