--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,6 +1,8 @@
 <div fxLayoutAlign="center center" fxFlexFill>
     <mat-card fxFlex="25">
       <form #loginForm="ngForm" (ngSubmit)="onSubmit()" fxLayout="column" novalidate>
+
+        <div *ngIf="displayEmsg"><h3>{{displayEmsg}}</h3></div>
         
         <mat-form-field>
           <input matInput name="username" class="form-name" placeholder="Username"
